--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,38 @@ name: Build
 on: [push]
 
 jobs:
-   tests:
+  build:
+    runs-on: ubuntu-18.04
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Set up Python version
+      uses: actions/setup-python@v1
+      with:
+        python-version: 3.8
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements-dev.txt
+
+    - name: Flake8 check
+      run: make lint
+
+    - name: Typing check
+      run: make types
+
+    - name: python-black check
+      run: make black
+
+    - name: Generate coverage report
+      run: tox -e py
+
+    - name: Upload coverage report
+      run: bash <(curl -s https://codecov.io/bash)
+
+  tests:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
