--- a/.editorconfig
+++ b/.editorconfig
@@ -3,6 +3,9 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 indent_style = space
 
+[Makefile]
+indent_style = tab
+
 [*.py]
 indent_size = 4
 charset = utf-8
