--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ envlist = py35,py36,py37,py38
 deps =
     -rtests/requirements.txt
 commands =
-    py.test --cov=scrapy_itemadapter --cov-report=term-missing --cov-report=html --cov-report=xml {posargs: scrapy_itemadapter.py tests}
+    py.test --cov=itemadapter --cov-report=term-missing --cov-report=html --cov-report=xml {posargs: itemadapter tests}
 
 
 [testenv:py35]
