Fix long description content type

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   build:
-    name: Lint, typing, coverage
+    name: Lint, typing, coverage, publish
     runs-on: ubuntu-latest
 
     steps:
