--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py35,py36,py37,py38
+envlist = py35,py36,py37,py38,checks
 
 
 [testenv]
@@ -23,3 +23,15 @@ basepython = python3.7
 
 [testenv:py38]
 basepython = python3.8
+
+
+[testenv:checks]
+basepython = python3.8
+deps =
+    black>=19.10b0
+    flake8>=3.7.9
+    mypy>=0.770
+commands =
+    flake8 --exclude=.git,.tox,venv* itemadapter tests
+    mypy --ignore-missing-imports --follow-imports=skip itemadapter
+    black --check itemadapter tests
