--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,19 +15,11 @@ jobs:
       with:
         python-version: 3.8
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements-dev.txt
+    - name: Install tox
+      run: pip install tox
 
-    - name: Flake8 check
-      run: make lint
-
-    - name: Typing check
-      run: make types
-
-    - name: python-black check
-      run: make black
+    - name: Flake8, typing, python-black
+      run: tox -e checks
 
     - name: Generate coverage report
       run: tox -e py
