Separate tox environments

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py35,py36,py37,py38,checks
+envlist = py35,py36,py37,py38,flake8,typing,black
 
 
 [testenv]
@@ -25,13 +25,25 @@ basepython = python3.7
 basepython = python3.8
 
 
-[testenv:checks]
+[testenv:flake8]
+basepython = python3.8
+deps =
+    flake8>=3.7.9
+commands =
+    flake8 --exclude=.git,.tox,venv* itemadapter tests
+
+
+[testenv:typing]
+basepython = python3.8
+deps =
+    mypy>=0.770
+commands =
+    mypy --ignore-missing-imports --follow-imports=skip itemadapter
+
+
+[testenv:black]
 basepython = python3.8
 deps =
     black>=19.10b0
-    flake8>=3.7.9
-    mypy>=0.770
 commands =
-    flake8 --exclude=.git,.tox,venv* itemadapter tests
-    mypy --ignore-missing-imports --follow-imports=skip itemadapter
     black --check itemadapter tests
