--- a/tox.ini
+++ b/tox.ini
@@ -29,7 +29,7 @@ commands =
 [testenv:typing]
 basepython = python3.8
 deps =
-    mypy>=0.770
+    mypy==0.770
 commands =
     mypy --ignore-missing-imports --follow-imports=skip itemadapter
 
