--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,5 @@
 [tox]
-envlist = py35,py36,py37,py38
-
+envlist = py35,py36,py37,py38,flake8,typing,black
 
 [testenv]
 deps =
@@ -8,18 +7,35 @@ deps =
 commands =
     py.test --verbose --cov=itemadapter --cov-report=term-missing --cov-report=html --cov-report=xml {posargs: itemadapter tests}
 
-
 [testenv:py35]
 basepython = python3.5
-
 
 [testenv:py36]
 basepython = python3.6
 
-
 [testenv:py37]
 basepython = python3.7
 
-
 [testenv:py38]
 basepython = python3.8
+
+[testenv:flake8]
+basepython = python3.8
+deps =
+    flake8>=3.7.9
+commands =
+    flake8 --exclude=.git,.tox,venv* itemadapter tests
+
+[testenv:typing]
+basepython = python3.8
+deps =
+    mypy==0.770
+commands =
+    mypy --ignore-missing-imports --follow-imports=skip itemadapter
+
+[testenv:black]
+basepython = python3.8
+deps =
+    black>=19.10b0
+commands =
+    black --check itemadapter tests
