--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,19 +15,17 @@ jobs:
       with:
         python-version: 3.8
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements-dev.txt
+    - name: Install tox
+      run: pip install tox
 
-    - name: Flake8 check
-      run: make lint
+    - name: Flake8
+      run: tox -e flake8
 
-    - name: Typing check
-      run: make types
+    - name: Typing
+      run: tox -e typing
 
-    - name: python-black check
-      run: make black
+    - name: Black
+      run: tox -e black
 
     - name: Generate coverage report
       run: tox -e py
