--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ envlist = py35,py36,py37,py38,flake8,typing,black
 deps =
     -rtests/requirements.txt
 commands =
-    py.test --verbose --cov=itemadapter --cov-report=term-missing --cov-report=html --cov-report=xml {posargs: itemadapter tests}
+    pytest --verbose --cov=itemadapter --cov-report=term-missing --cov-report=html --cov-report=xml {posargs: itemadapter tests}
 
 [testenv:py35]
 basepython = python3.5
