--- a/tox.ini
+++ b/tox.ini
@@ -1,22 +1,45 @@
 [tox]
-envlist = py35,py36,py37,py38,flake8,typing,black
+envlist = py35,py36,py37,py38,py38-no-deps,flake8,typing,black
 
 [testenv]
 deps =
-    -rtests/requirements.txt
+    pytest>=5.4
+    pytest-cov>=2.8
 commands =
-    pytest --verbose --cov=itemadapter --cov-report=term-missing --cov-report=html --cov-report=xml {posargs: itemadapter tests}
+    pytest --verbose --cov=itemadapter --cov-report=term-missing --cov-report=html --cov-report=xml --cov-append {posargs: itemadapter tests}
 
 [testenv:py35]
 basepython = python3.5
+deps =
+    {[testenv]deps}
+    attrs
+    scrapy>=2.0
 
 [testenv:py36]
 basepython = python3.6
+deps =
+    {[testenv]deps}
+    attrs
+    dataclasses
+    scrapy>=2.0
 
 [testenv:py37]
 basepython = python3.7
+deps =
+    {[testenv]deps}
+    attrs
+    scrapy>=2.0
 
 [testenv:py38]
+basepython = python3.8
+deps =
+    {[testenv]deps}
+    attrs
+    scrapy>=2.0
+
+[testenv:py38-no-deps]
+deps =
+    {[testenv]deps}
 basepython = python3.8
 
 [testenv:flake8]
