--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,8 @@ name: Build
 on: [push]
 
 jobs:
-  build:
-    name: Lint, typing, coverage, publish
+  checks:
+    name: Lint, typing, coverage
     runs-on: ubuntu-latest
 
     steps:
@@ -32,15 +32,6 @@ jobs:
 
     - name: Upload coverage report
       run: bash <(curl -s https://codecov.io/bash)
-
-    - name: Publish to PyPI
-      if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/v')
-      run: |
-        pip install --upgrade setuptools wheel twine
-        python setup.py sdist bdist_wheel
-        export TWINE_USERNAME=__token__
-        export TWINE_PASSWORD=${{ secrets.PYPI_TOKEN }}
-        twine upload dist/*
 
 
   tests-ubuntu:
@@ -84,3 +75,26 @@ jobs:
 
     - name: Run tests
       run: tox -e py
+
+
+  publish:
+    name: "Publish package to PyPI"
+    runs-on: ubuntu-latest
+    needs: [checks, tests-ubuntu, tests-other-os]
+    if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/v')
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Set up Python 3.8
+      uses: actions/setup-python@v1
+      with:
+        python-version: 3.8
+
+    - name: Publish to PyPI
+      run: |
+        pip install --upgrade setuptools wheel twine
+        python setup.py sdist bdist_wheel
+        export TWINE_USERNAME=__token__
+        export TWINE_PASSWORD=${{ secrets.PYPI_TOKEN }}
+        twine upload dist/*
