--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py35,py36,py37,py38,py38-no-deps,flake8,typing,black
+envlist = py35,py36,py37,py38,no-deps,flake8,typing,black
 
 [testenv]
 deps =
@@ -37,10 +37,10 @@ deps =
     attrs
     scrapy>=2.0
 
-[testenv:py38-no-deps]
+[testenv:no-deps]
 deps =
     {[testenv]deps}
-basepython = python3.8
+basepython = python3.6
 
 [testenv:flake8]
 basepython = python3.8
