--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
       run: pip install tox
 
     - name: Run tests
-      run: tox -e py
+      run: tox -e py${{ matrix.python-version }}
 
     - name: Upload coverage report
       run: bash <(curl -s https://codecov.io/bash) -cF tests
