--- a/tox.ini
+++ b/tox.ini
@@ -1,63 +1,39 @@
 [tox]
-envlist = flake8,typing,black,py3.5,py3.6,py3.7,py3.8,no-deps
+envlist = flake8,typing,black,py,no-extra-deps
 
-[testenv]
+[base]
 deps =
     pytest>=5.4
     pytest-cov>=2.8
+
+[testenv]
+deps =
+    {[base]deps}
+    attrs
+    dataclasses; python_version >= '3.6' and python_version < '3.7'
+    scrapy>=2.0
 commands =
     pytest --verbose --cov=itemadapter --cov-report=term-missing --cov-report=html --cov-report=xml --cov-append {posargs: itemadapter tests}
 
-[testenv:py3.5]
-basepython = python3.5
+[testenv:no-extra-deps]
 deps =
     {[testenv]deps}
-    attrs
-    scrapy>=2.0
-
-[testenv:py3.6]
-basepython = python3.6
-deps =
-    {[testenv]deps}
-    attrs
-    dataclasses
-    scrapy>=2.0
-
-[testenv:py3.7]
-basepython = python3.7
-deps =
-    {[testenv]deps}
-    attrs
-    scrapy>=2.0
-
-[testenv:py3.8]
-basepython = python3.8
-deps =
-    {[testenv]deps}
-    attrs
-    scrapy>=2.0
-
-[testenv:no-deps]
-deps =
-    {[testenv]deps}
-basepython = python3.6
+setenv =
+    ITEMADAPTER_NO_EXTRA_DEPS=True
 
 [testenv:flake8]
-basepython = python3.8
 deps =
     flake8>=3.7.9
 commands =
     flake8 --exclude=.git,.tox,venv* itemadapter tests
 
 [testenv:typing]
-basepython = python3.8
 deps =
     mypy==0.770
 commands =
     mypy --ignore-missing-imports --follow-imports=skip itemadapter
 
 [testenv:black]
-basepython = python3.8
 deps =
     black>=19.10b0
 commands =
