--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ envlist = flake8,typing,black,py35,py36,py37,py38
 deps =
     -rtests/requirements.txt
 commands =
-    pytest --verbose --cov=itemadapter --cov-report=term-missing --cov-report=html --cov-report=xml {posargs: itemadapter tests}
+    pytest --verbose --cov=itemadapter --cov-report=term-missing --cov-report=html --cov-report=xml --doctest-glob=README.md {posargs: itemadapter README.md tests}
 
 [testenv:py35]
 basepython = python3.5
