Drop Python 3.5 support

--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,11 @@
 [tox]
-envlist = flake8,typing,black,py35,py36,py37,py38
+envlist = flake8,typing,black,py36,py37,py38
 
 [testenv]
 deps =
     -rtests/requirements.txt
 commands =
     pytest --verbose --cov=itemadapter --cov-report=term-missing --cov-report=html --cov-report=xml {posargs: itemadapter tests}
-
-[testenv:py35]
-basepython = python3.5
 
 [testenv:py36]
 basepython = python3.6
