Add bandit to tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -16,6 +16,13 @@ basepython = python3.7
 [testenv:py38]
 basepython = python3.8
 
+[testenv:bandit]
+basepython = python3
+deps =
+    bandit
+commands =
+    bandit -r {posargs:itemadapter}
+
 [testenv:flake8]
 basepython = python3.8
 deps =
