--- a/tox.ini
+++ b/tox.ini
@@ -19,18 +19,18 @@ basepython = python3
 deps =
     flake8>=3.7.9
 commands =
-    flake8 --exclude=.git,.tox,venv* itemadapter tests
+    flake8 --exclude=.git,.tox,venv* {posargs:itemadapter tests}
 
 [testenv:typing]
 basepython = python3
 deps =
     mypy==0.770
 commands =
-    mypy --ignore-missing-imports --follow-imports=skip itemadapter
+    mypy --ignore-missing-imports --follow-imports=skip {posargs:itemadapter}
 
 [testenv:black]
 basepython = python3
 deps =
     black>=19.10b0
 commands =
-    black --check itemadapter tests
+    black --check {posargs:itemadapter tests}
