--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 
 jobs:
   checks:
-    name: Flake8, typing, black
+    name: Lint, typing, coverage
     runs-on: ubuntu-latest
 
     steps:
