--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = flake8,typing,black,py36,py37,py38
+envlist = bandit,flake8,typing,black,py
 
 [testenv]
 deps =
@@ -7,32 +7,30 @@ deps =
 commands =
     pytest --verbose --cov=itemadapter --cov-report=term-missing --cov-report=html --cov-report=xml --doctest-glob=README.md {posargs: itemadapter README.md tests}
 
-[testenv:py36]
-basepython = python3.6
-
-[testenv:py37]
-basepython = python3.7
-
-[testenv:py38]
-basepython = python3.8
+[testenv:bandit]
+basepython = python3
+deps =
+    bandit
+commands =
+    bandit -r {posargs:itemadapter}
 
 [testenv:flake8]
-basepython = python3.8
+basepython = python3
 deps =
     flake8>=3.7.9
 commands =
-    flake8 --exclude=.git,.tox,venv* itemadapter tests
+    flake8 --exclude=.git,.tox,venv* {posargs:itemadapter tests}
 
 [testenv:typing]
-basepython = python3.8
+basepython = python3
 deps =
     mypy==0.770
 commands =
-    mypy --ignore-missing-imports --follow-imports=skip itemadapter
+    mypy --ignore-missing-imports --follow-imports=skip {posargs:itemadapter}
 
 [testenv:black]
-basepython = python3.8
+basepython = python3
 deps =
     black>=19.10b0
 commands =
-    black --check itemadapter tests
+    black --check {posargs:itemadapter tests}
