--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,14 +4,14 @@ on: [push, pull_request]
 
 jobs:
   checks:
-    name: Lint, typing, coverage
-    runs-on: ubuntu-latest
+    name: Lint, typing, security
+    runs-on: ubuntu-18.04
 
     steps:
     - uses: actions/checkout@v2
 
     - name: Set up Python 3.8
-      uses: actions/setup-python@v1
+      uses: actions/setup-python@v2
       with:
         python-version: 3.8
 
@@ -27,16 +27,13 @@ jobs:
     - name: Black
       run: tox -e black
 
-    - name: Generate coverage report
-      run: tox -e py
-
-    - name: Upload coverage report
-      run: bash <(curl -s https://codecov.io/bash)
+    - name: Bandit
+      run: tox -e bandit
 
 
   tests-ubuntu:
     name: "Test: py${{ matrix.python-version }}, Ubuntu"
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     strategy:
       matrix:
         python-version: [3.6, 3.7, 3.8]
@@ -45,7 +42,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
+      uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
 
@@ -54,6 +51,10 @@ jobs:
 
     - name: Run tests
       run: tox -e py
+
+    - name: Upload coverage report
+      run: bash <(curl -s https://codecov.io/bash)
+
 
   tests-other-os:
     name: "Test: py3.8, ${{ matrix.os }}"
@@ -66,7 +67,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Set up Python 3.8
-      uses: actions/setup-python@v1
+      uses: actions/setup-python@v2
       with:
         python-version: 3.8
 
@@ -76,10 +77,13 @@ jobs:
     - name: Run tests
       run: tox -e py
 
+    - name: Upload coverage report
+      run: bash <(curl -s https://codecov.io/bash)
+
 
   publish:
     name: "Publish package to PyPI"
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     needs: [checks, tests-ubuntu, tests-other-os]
     if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/v')
 
@@ -87,7 +91,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Set up Python 3.8
-      uses: actions/setup-python@v1
+      uses: actions/setup-python@v2
       with:
         python-version: 3.8
 
