--- a/tox.ini
+++ b/tox.ini
@@ -26,7 +26,7 @@ basepython = python3
 deps =
     mypy==0.770
 commands =
-    mypy --ignore-missing-imports --follow-imports=skip {posargs:itemadapter}
+    mypy --show-error-codes --ignore-missing-imports --follow-imports=skip {posargs:itemadapter}
 
 [testenv:black]
 basepython = python3
