[CI] add pylint check

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = bandit,flake8,typing,black,py
+envlist = bandit,flake8,typing,black,py,pylint
 
 [testenv]
 deps =
@@ -34,3 +34,9 @@ deps =
     black>=19.10b0
 commands =
     black --check {posargs:itemadapter tests}
+
+[testenv:pylint]
+deps =
+    pylint==2.11.1
+commands =
+    pylint {posargs:itemadapter}
