--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,7 +25,10 @@ jobs:
       run: tox -e py
 
     - name: Upload coverage report
-      run: bash <(curl -s https://codecov.io/bash)
+      run: |
+        curl -Os https://uploader.codecov.io/latest/linux/codecov
+        chmod +x codecov
+        ./codecov
 
   tests-other:
     name: "Test: py3, ${{ matrix.os }}"
@@ -33,23 +36,20 @@ jobs:
     strategy:
       matrix:
         include:
-        - python-version: 3
-          os: ubuntu-latest
+        - os: ubuntu-latest
           env:
             TOXENV: py38-scrapy22
-        - python-version: 3
-          os: macos-latest
+        - os: macos-latest
           env:
             TOXENV: py
-        - python-version: 3
-          os: windows-latest
+        - os: windows-latest
           env:
             TOXENV: py
 
     steps:
     - uses: actions/checkout@v2
 
-    - name: Set up Python 3.8
+    - name: Set up Python
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
@@ -60,3 +60,9 @@ jobs:
     - name: Run tests
       env: ${{ matrix.env }}
       run: tox
+
+    - name: Upload coverage report
+      run: |
+        curl -Os https://uploader.codecov.io/latest/linux/codecov
+        chmod +x codecov
+        ./codecov
