Determine scrapy item classes only once

--- a/tox.ini
+++ b/tox.ini
@@ -25,9 +25,10 @@ commands =
 [testenv:typing]
 basepython = python3
 deps =
-    mypy==0.770
+    mypy==0.941
 commands =
-    mypy --show-error-codes --ignore-missing-imports --follow-imports=skip {posargs:itemadapter}
+    mypy --install-types --non-interactive \
+        --show-error-codes --ignore-missing-imports --follow-imports=skip {posargs:itemadapter}
 
 [testenv:black]
 basepython = python3
