--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,31 +25,19 @@ jobs:
       run: tox -e py
 
     - name: Upload coverage report
-      run: bash <(curl -s https://codecov.io/bash)
+      run: |
+        curl -Os https://uploader.codecov.io/latest/linux/codecov
+        chmod +x codecov
+        ./codecov
 
   tests-other:
-    name: "Test: py3, ${{ matrix.os }}"
-    runs-on: "${{ matrix.os }}"
-    strategy:
-      matrix:
-        include:
-        - python-version: 3
-          os: ubuntu-latest
-          env:
-            TOXENV: py38-scrapy22
-        - python-version: 3
-          os: macos-latest
-          env:
-            TOXENV: py
-        - python-version: 3
-          os: windows-latest
-          env:
-            TOXENV: py
+    name: "Test: py38-scrapy22, Ubuntu"
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
 
-    - name: Set up Python 3.8
+    - name: Set up Python
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
@@ -58,5 +46,31 @@ jobs:
       run: pip install tox
 
     - name: Run tests
-      env: ${{ matrix.env }}
+      run: tox -e py38-scrapy22
+
+    - name: Upload coverage report
+      run: |
+        curl -Os https://uploader.codecov.io/latest/linux/codecov
+        chmod +x codecov
+        ./codecov
+
+  tests-other-os:
+    name: "Test: py38, ${{ matrix.os }}"
+    runs-on: "${{ matrix.os }}"
+    strategy:
+      matrix:
+        os: [macos-latest, windows-latest]
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.8
+
+    - name: Install tox
+      run: pip install tox
+
+    - name: Run tests
       run: tox -e py
