Install more deps for typing, remove --follow-imports=skip.

--- a/tox.ini
+++ b/tox.ini
@@ -26,9 +26,12 @@ commands =
 basepython = python3
 deps =
     mypy==0.991
+    attrs
+    pydantic
+    scrapy
 commands =
     mypy --install-types --non-interactive \
-        --show-error-codes --ignore-missing-imports --follow-imports=skip {posargs:itemadapter}
+        --show-error-codes --ignore-missing-imports {posargs:itemadapter}
 
 [testenv:black]
 basepython = python3
