--- a/tox.ini
+++ b/tox.ini
@@ -36,7 +36,7 @@ commands =
 [testenv:black]
 basepython = python3
 deps =
-    black>=19.10b0
+    black==22.12.0
 commands =
     black --check {posargs:itemadapter tests}
 
