--- a/tox.ini
+++ b/tox.ini
@@ -25,15 +25,18 @@ commands =
 [testenv:typing]
 basepython = python3
 deps =
-    mypy==0.941
+    mypy==0.991
+    attrs
+    pydantic
+    scrapy
 commands =
     mypy --install-types --non-interactive \
-        --show-error-codes --ignore-missing-imports --follow-imports=skip {posargs:itemadapter}
+        --show-error-codes --ignore-missing-imports {posargs:itemadapter}
 
 [testenv:black]
 basepython = python3
 deps =
-    black>=19.10b0
+    black==22.12.0
 commands =
     black --check {posargs:itemadapter tests}
 
