--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,8 +7,29 @@ jobs:
     name: "Test: py${{ matrix.python-version }}, Ubuntu"
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11"]
+        include:
+        - python-version: "3.8"
+          env:
+            TOXENV: py
+        - python-version: "3.9"
+          env:
+            TOXENV: py
+        - python-version: "3.10"
+          env:
+            TOXENV: py
+        - python-version: "3.11"
+          env:
+            TOXENV: py
+
+        # pinned deps
+        - python-version: "3.8"
+          env:
+            TOXENV: py38-scrapy22
+        - python-version: "3.8"
+          env:
+            TOXENV: py-pydantic1
 
     steps:
     - uses: actions/checkout@v2
@@ -22,31 +43,7 @@ jobs:
       run: pip install tox
 
     - name: Run tests
-      run: tox -e py
-
-    - name: Upload coverage report
-      run: |
-        curl -Os https://uploader.codecov.io/latest/linux/codecov
-        chmod +x codecov
-        ./codecov
-
-  tests-other:
-    name: "Test: py38-scrapy22, Ubuntu"
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v2
-
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.8
-
-    - name: Install tox
-      run: pip install tox
-
-    - name: Run tests
-      run: tox -e py38-scrapy22
+      run: tox
 
     - name: Upload coverage report
       run: |
