--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,11 @@
 [tox]
-envlist = bandit,flake8,typing,black,py,py38-scrapy22,pylint
+envlist = bandit,flake8,typing,black,py,py38-scrapy22,py-pydantic1,pylint
 
 [testenv]
 deps =
     -rtests/requirements.txt
     py38-scrapy22: scrapy==2.2
+    py-pydantic1: pydantic<2
 commands =
     pytest --verbose --cov=itemadapter --cov-report=term-missing --cov-report=html --cov-report=xml --doctest-glob=README.md {posargs: itemadapter README.md tests}
 
