--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -43,7 +43,7 @@ jobs:
       run: pip install tox
 
     - name: Run tests
-      run: tox
+      run: tox -e ${{ matrix.env.TOXENV }}
 
     - name: Upload coverage report
       run: |
