--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@ commands =
 [testenv:flake8]
 basepython = python3
 deps =
-    flake8>=3.7.9
+    flake8==6.1.0
 commands =
     flake8 --exclude=.git,.tox,venv* {posargs:itemadapter tests}
 
