--- a/tox.ini
+++ b/tox.ini
@@ -25,13 +25,13 @@ commands =
 [testenv:typing]
 basepython = python3
 deps =
-    mypy==0.991
+    mypy==1.5.1
     attrs
     pydantic
     scrapy
 commands =
     mypy --install-types --non-interactive \
-        --show-error-codes --ignore-missing-imports {posargs:itemadapter}
+        --ignore-missing-imports {posargs:itemadapter}
 
 [testenv:black]
 basepython = python3
@@ -42,6 +42,6 @@ commands =
 
 [testenv:pylint]
 deps =
-    pylint==2.11.1
+    pylint==3.0.0
 commands =
     pylint {posargs:itemadapter}
