Add Python 3.12 to supported versions, bump tool versions (#77)
* Bump and pin flake8.

* Add Python 3.12 to supported versions.

* Bump black.

* Bump mypy and pylint.

* Update CI actions.

--- a/tox.ini
+++ b/tox.ini
@@ -18,30 +18,30 @@ commands =
 [testenv:flake8]
 basepython = python3
 deps =
-    flake8>=3.7.9
+    flake8==6.1.0
 commands =
     flake8 --exclude=.git,.tox,venv* {posargs:itemadapter tests}
 
 [testenv:typing]
 basepython = python3
 deps =
-    mypy==0.991
+    mypy==1.5.1
     attrs
     pydantic
     scrapy
 commands =
     mypy --install-types --non-interactive \
-        --show-error-codes --ignore-missing-imports {posargs:itemadapter}
+        --ignore-missing-imports {posargs:itemadapter}
 
 [testenv:black]
 basepython = python3
 deps =
-    black==22.12.0
+    black==23.9.1
 commands =
     black --check {posargs:itemadapter tests}
 
 [testenv:pylint]
 deps =
-    pylint==2.11.1
+    pylint==3.0.0
 commands =
     pylint {posargs:itemadapter}
