Switch to pypa/gh-action-pypi-publish.

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -23,6 +23,9 @@ jobs:
         - python-version: 3.12
           env:
             TOXENV: pylint
+        - python-version: 3.12
+          env:
+            TOXENV: twinecheck
 
     steps:
     - uses: actions/checkout@v4
