--- a/tox.ini
+++ b/tox.ini
@@ -45,3 +45,12 @@ deps =
     pylint==3.1.0
 commands =
     pylint {posargs:itemadapter}
+
+[testenv:twinecheck]
+basepython = python3
+deps =
+    twine==5.0.0
+    build==1.2.1
+commands =
+    python -m build --sdist
+    twine check dist/*
