--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -23,12 +23,15 @@ jobs:
         - python-version: 3.12
           env:
             TOXENV: pylint
+        - python-version: 3.12
+          env:
+            TOXENV: twinecheck
 
     steps:
     - uses: actions/checkout@v4
 
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
 
