--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@ commands =
 [testenv:flake8]
 basepython = python3
 deps =
-    flake8==6.1.0
+    flake8==7.0.0
 commands =
     flake8 --exclude=.git,.tox,venv* {posargs:itemadapter tests}
 
@@ -36,12 +36,21 @@ commands =
 [testenv:black]
 basepython = python3
 deps =
-    black==23.9.1
+    black==24.4.2
 commands =
     black --check {posargs:itemadapter tests}
 
 [testenv:pylint]
 deps =
-    pylint==3.0.0
+    pylint==3.1.0
 commands =
     pylint {posargs:itemadapter}
+
+[testenv:twinecheck]
+basepython = python3
+deps =
+    twine==5.0.0
+    build==1.2.1
+commands =
+    python -m build --sdist
+    twine check dist/*
