--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = bandit,flake8,typing,black,py,py38-scrapy22,pylint
+envlist = typing,py,py38-scrapy22,pylint,pre-commit,twinecheck
 
 [testenv]
 deps =
@@ -7,20 +7,6 @@ deps =
     py38-scrapy22: scrapy==2.2
 commands =
     pytest --verbose --cov=itemadapter --cov-report=term-missing --cov-report=html --cov-report=xml --doctest-glob=README.md {posargs: itemadapter README.md tests}
-
-[testenv:bandit]
-basepython = python3
-deps =
-    bandit
-commands =
-    bandit -r {posargs:itemadapter}
-
-[testenv:flake8]
-basepython = python3
-deps =
-    flake8==7.0.0
-commands =
-    flake8 --exclude=.git,.tox,venv* {posargs:itemadapter tests}
 
 [testenv:typing]
 basepython = python3
@@ -32,13 +18,6 @@ deps =
 commands =
     mypy --install-types --non-interactive \
         --ignore-missing-imports {posargs:itemadapter}
-
-[testenv:black]
-basepython = python3
-deps =
-    black==24.4.2
-commands =
-    black --check {posargs:itemadapter tests}
 
 [testenv:pylint]
 deps =
@@ -54,3 +33,8 @@ deps =
 commands =
     python -m build --sdist
     twine check dist/*
+
+[testenv:pre-commit]
+deps = pre-commit
+commands = pre-commit run --all-files --show-diff-on-failure
+skip_install = true
