--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,8 +7,9 @@ jobs:
     name: "Test: ${{ matrix.python-version }}, Ubuntu"
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12", "pypy3.9", "pypy3.10"]
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13", "pypy3.10"]
 
     steps:
     - uses: actions/checkout@v4
@@ -31,7 +32,7 @@ jobs:
         ./codecov
 
   tests-other:
-    name: "Test: py38-scrapy22, Ubuntu"
+    name: "Test: py39-scrapy22, Ubuntu"
     runs-on: ubuntu-latest
 
     steps:
@@ -40,13 +41,13 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: 3.8
+        python-version: 3.9
 
     - name: Install tox
       run: pip install tox
 
     - name: Run tests
-      run: tox -e py38-scrapy22
+      run: tox -e py39-scrapy22
 
     - name: Upload coverage report
       run: |
@@ -55,7 +56,7 @@ jobs:
         ./codecov
 
   tests-other-os:
-    name: "Test: py38, ${{ matrix.os }}"
+    name: "Test: py39, ${{ matrix.os }}"
     runs-on: "${{ matrix.os }}"
     strategy:
       matrix:
@@ -67,7 +68,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: 3.8
+        python-version: 3.9
 
     - name: Install tox
       run: pip install tox
