Fix a typing issue with typed scrapy, bump mypy.

--- a/tox.ini
+++ b/tox.ini
@@ -11,13 +11,12 @@ commands =
 [testenv:typing]
 basepython = python3
 deps =
-    mypy==1.11.2
+    mypy==1.13.0
     attrs
     pydantic
     scrapy
 commands =
-    mypy --install-types --non-interactive \
-        --ignore-missing-imports {posargs:itemadapter}
+    mypy {posargs:itemadapter}
 
 [testenv:pylint]
 deps =
