--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,32 @@
 [tox]
-envlist = typing,py,py38-scrapy22,pylint,py-pydantic1,pre-commit,twinecheck
+envlist = min-attrs,min-pydantic,min-scrapy,py39,py310,py311,py312,py313,attrs,pydantic1,pydantic,scrapy,pre-commit,typing,docs,twinecheck,pylint
 
 [testenv]
+basepython =
+    min-attrs,min-pydantic,min-scrapy: python3.9
 deps =
     -rtests/requirements.txt
-    py39-scrapy22: scrapy==2.2
-    py-pydantic1: pydantic<2
+    min-attrs: attrs==18.1.0
+    min-pydantic: pydantic==1.8
+    min-scrapy: scrapy==2.2
+    pydantic1: pydantic<2
+extras =
+    min-attrs,attrs: attrs
+    min-pydantic,pydantic1,pydantic: pydantic
+    min-scrapy,scrapy: scrapy
 commands =
-    pytest --verbose --cov=itemadapter --cov-report=term-missing --cov-report=html --cov-report=xml --doctest-glob=README.md {posargs: itemadapter README.md tests}
+    pytest --verbose --cov=itemadapter --cov-report=term-missing --cov-report=html --cov-report=xml {posargs: itemadapter tests}
+
+[testenv:docs]
+deps =
+    {[testenv]deps}
+    zyte-common-items
+extras =
+    attrs
+    pydantic
+    scrapy
+commands =
+    pytest --verbose --cov=itemadapter --cov-report=term-missing --cov-report=html --cov-report=xml --doctest-glob=README.md {posargs:README.md}
 
 [testenv:typing]
 basepython = python3
