Add extra tox envs

--- a/tox.ini
+++ b/tox.ini
@@ -1,19 +1,19 @@
 [tox]
-envlist = min-attrs,min-pydantic,min-scrapy,py39,py310,py311,py312,py313,attrs,pydantic1,pydantic,scrapy,pre-commit,typing,docs,twinecheck,pylint
+envlist = min-attrs,min-pydantic,min-scrapy,min-extra,py39,py310,py311,py312,py313,attrs,pydantic1,pydantic,scrapy,extra,extra-pydantic1,pre-commit,typing,docs,twinecheck,pylint
 
 [testenv]
 basepython =
-    min-attrs,min-pydantic,min-scrapy: python3.9
+    min-attrs,min-pydantic,min-scrapy,min-extra: python3.9
 deps =
     -rtests/requirements.txt
-    min-attrs: attrs==18.1.0
-    min-pydantic: pydantic==1.8
-    min-scrapy: scrapy==2.2
-    pydantic1: pydantic<2
+    min-attrs,min-extra: attrs==18.1.0
+    min-pydantic,min-extra: pydantic==1.8
+    min-scrapy,min-extra: scrapy==2.2
+    pydantic1,extra-pydantic1: pydantic<2
 extras =
-    min-attrs,attrs: attrs
-    min-pydantic,pydantic1,pydantic: pydantic
-    min-scrapy,scrapy: scrapy
+    min-attrs,attrs,min-extra,extra,extra-pydantic1: attrs
+    min-pydantic,pydantic1,pydantic,min-extra,extra,extra-pydantic1: pydantic
+    min-scrapy,scrapy,min-extra,extra,extra-pydantic1: scrapy
 commands =
     pytest --verbose --cov=itemadapter --cov-report=term-missing --cov-report=html --cov-report=xml {posargs: itemadapter tests}
 
