--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,6 +21,9 @@ jobs:
             TOXENV: min-scrapy
         - python-version: "3.9"
           env:
+            TOXENV: min-extra
+        - python-version: "3.9"
+          env:
             TOXENV: py
         - python-version: "3.10"
           env:
@@ -49,6 +52,12 @@ jobs:
         - python-version: "3.13"
           env:
             TOXENV: scrapy
+        - python-version: "3.13"
+          env:
+            TOXENV: extra
+        - python-version: "3.13"
+          env:
+            TOXENV: extra-pydantic1
 
     steps:
     - uses: actions/checkout@v4
