--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -71,6 +71,7 @@ jobs:
       run: pip install tox
 
     - name: Run tests
+      env: ${{ matrix.env }}
       run: tox
 
     - name: Upload coverage report
