--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ commands =
 [testenv:typing]
 basepython = python3
 deps =
-    mypy==1.13.0
+    mypy==1.14.1
     attrs
     pydantic
     scrapy
@@ -20,15 +20,15 @@ commands =
 
 [testenv:pylint]
 deps =
-    pylint==3.3.1
+    pylint==3.3.3
 commands =
     pylint {posargs:itemadapter}
 
 [testenv:twinecheck]
 basepython = python3
 deps =
-    twine==5.1.1
-    build==1.2.2
+    twine==6.1.0
+    build==1.2.2.post1
 commands =
     python -m build --sdist
     twine check dist/*
