Enable pylint for tests.

--- a/tox.ini
+++ b/tox.ini
@@ -22,7 +22,7 @@ commands =
 deps =
     pylint==3.3.3
 commands =
-    pylint {posargs:itemadapter}
+    pylint {posargs:itemadapter tests}
 
 [testenv:twinecheck]
 basepython = python3
