--- a/tox.ini
+++ b/tox.ini
@@ -31,10 +31,10 @@ commands =
 [testenv:typing]
 basepython = python3
 deps =
-    mypy==1.14.1
-    attrs
-    pydantic
-    scrapy
+    mypy==1.16.1
+    attrs==25.3.0
+    pydantic==2.11.7
+    scrapy==2.13.2
 commands =
     mypy {posargs:itemadapter}
 
