--- a/tox.ini
+++ b/tox.ini
@@ -5,8 +5,10 @@ envlist = min-attrs,min-pydantic,min-scrapy,min-extra,py39,py310,py311,py312,py3
 basepython =
     min-attrs,min-pydantic,min-scrapy,min-extra: python3.9
 deps =
-    -rtests/requirements.txt
-    min-attrs,min-extra: attrs==18.1.0
+    pytest>=5.4
+    pytest-cov>=2.8
+    packaging
+    min-attrs,min-extra: attrs==20.1.0
     min-pydantic,min-extra: pydantic==1.8
     min-scrapy,min-extra: scrapy==2.2
     pydantic1,extra-pydantic1: pydantic<2
@@ -40,7 +42,8 @@ commands =
 
 [testenv:pylint]
 deps =
-    pylint==3.3.4
+    pylint==3.3.7
+    pylint-per-file-ignores==1.4.0
 commands =
     pylint {posargs:itemadapter tests}
 
