Add Python 3.14 RC2 to CI, bump tool versions.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,6 +37,12 @@ jobs:
         - python-version: "3.13"
           env:
             TOXENV: py
+        - python-version: "3.14.0-rc.2"
+          env:
+            TOXENV: py
+        - python-version: "3.14.0-rc.2"
+          env:
+            TOXENV: extra
         - python-version: "3.13"
           env:
             TOXENV: attrs
@@ -63,10 +69,10 @@ jobs:
             TOXENV: py
 
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v5
 
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v5
+      uses: actions/setup-python@v6
       with:
         python-version: ${{ matrix.python-version }}
 
@@ -88,10 +94,10 @@ jobs:
         os: [macos-latest, windows-latest]
 
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v5
 
     - name: Set up Python
-      uses: actions/setup-python@v5
+      uses: actions/setup-python@v6
       with:
         python-version: 3.9
 
