Drop Python 3.9 support.

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,9 @@
 [tox]
-envlist = min-attrs,min-pydantic,min-scrapy,min-extra,py39,py310,py311,py312,py313,py314,attrs,pydantic1,pydantic,scrapy,extra,extra-pydantic1,pre-commit,typing,docs,twinecheck,pylint
+envlist = min-attrs,min-pydantic,min-scrapy,min-extra,py310,py311,py312,py313,py314,attrs,pydantic1,pydantic,scrapy,extra,extra-pydantic1,pre-commit,typing,docs,twinecheck,pylint
 
 [testenv]
 basepython =
-    min-attrs,min-pydantic,min-scrapy,min-extra: python3.9
+    min-attrs,min-pydantic,min-scrapy,min-extra: python3.10
 deps =
     pytest>=5.4
     pytest-cov>=2.8
